# rust-socks2

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  deny.toml  justfile  rustfmt.toml
.github/workflows/: build.yml  lint.yml  release.yml
src/: error.rs  ext_bytes.rs  io_ext.rs  lib.rs  v4.rs  v5.rs  writev.rs
test/: Dockerfile  dante_no_auth.conf  dante_password.conf
test/github/: dante_no_auth.conf  dante_password.conf  macos-latest-setup.sh  ubuntu-latest-setup.sh
