[package]
name = "socks2"
version = "0.4.0"
edition = "2021"
authors = ["Steven Fackler <sfackler@gmail.com>", "harmless-tech"]
readme = "README.md"
license = "MIT/Apache-2.0"
description = "SOCKS proxy clients"
repository = "https://github.com/harmless-tech/rust-socks2"
categories = ["web-programming::http-client"]
keywords = ["socks", "proxy", "client"]
rust-version = "1.71.1"

[dependencies]
# TODO: Get rid of?
byteorder = "1.5"

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", optional = true, features = ["Win32_System_IO", "Win32_Networking_WinSock"] }

[features]
default = ["client", "bind", "udp"]
client = ["socks4-client", "socks5-client"]
bind = ["socks4-client", "socks4-bind"]
udp = ["socks5-udp"]
socks4-client = []
socks4-bind = []
socks5-client = []
socks5-bind = []
socks5-udp = ["libc", "windows-sys"]

[package.metadata.docs.rs]
all-features = true

[lints.clippy]
cargo = "deny"
correctness = "deny"
complexity = "deny"
nursery = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
