[package]
name = "socks2"
version = "0.4.0"
edition = "2021"
authors = ["Steven Fackler <sfackler@gmail.com>", "harmless-tech"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "SOCKS proxy clients"
repository = "https://github.com/harmless-tech/rust-socks2"
categories = ["web-programming::http-client"]
keywords = ["socks", "proxy", "client"]
rust-version = "1.65"
include = [
    "src/",
    "Cargo.lock",
    "Cargo.toml",
    "CHANGELOG.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
]

[dependencies]

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", optional = true, features = ["Win32_System_IO", "Win32_Networking_WinSock"] }

[features]
default = ["client", "bind", "udp"]
client = []
bind = ["client"]
udp = ["client", "libc", "windows-sys"]

[package.metadata.docs.rs]
all-features = true

[lints.clippy]
cargo = "deny"
correctness = "deny"
complexity = "deny"
nursery = "deny"
pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
